Link naar payment.html
de link van cart.html naar payment.html doet het

--- a/cart.html
+++ b/cart.html
@@ -25,8 +25,7 @@
           <!-- 
             Winkelwagen hier
           -->
-          
-          <button>Dit is correct, verder naar betaling</button>
+          <button type=“button”><a href="payment.html">Dit is correct, verder naar betaling</a></button>
         </div>
       </article>
     </div>
