--- a/cart.html
+++ b/cart.html
@@ -22,9 +22,38 @@
         <h2>Winkelwagentje</h2>
         <div>
           <span>Dit zijn alle producten die u gaat bestellen. Controleer een laatste keer of alles klopt en ga daarna verder met de grote groene knop.</span>
-          <!-- 
-            Winkelwagen hier
-          -->
+          <table>
+            <thead>
+              <th>Product</th>
+              <th>Prijs(enkel)</th>
+              <th>Aantal</th>
+              <th>Prijs(totaal)</th>
+            </thead>
+            <tr>
+              <td>Entreekaartje Kind t/m 3 jaar</td>
+              <td>&euro; 0</td>
+              <td>1</td>
+              <td>&euro; 0</td>
+            </tr>
+            <tr>
+              <td>Entreekaartje Regulier</td>
+              <td>&euro; 24,95</td>
+              <td>2</td>
+              <td>&euro; 49,90</td>
+            </tr>
+            <tr>
+              <td>Entreekaartje Senior</td>
+              <td>&euro; 14,95</td>
+              <td>1</td>
+              <td>&euro; 14,95</td>
+            </tr>
+            <tfoot>
+              <th></th>
+              <th ></th>
+              <th>Totaalsom<br>(incl.btw</th>
+              <th>&euro; 64,85</th>
+            </tfoot>
+          </table>
           <button type=“button”><a href="payment.html">Dit is correct, verder naar betaling</a></button>
         </div>
       </article>
