--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>Merchandise</h2>
         <div class="row">
           <div class="product">
-            <img src="merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+            <img src="../merchandise/mok.JPG" alt="Een mok van DeveloperLand">
             <span>Een mok met jouw eigen actiefoto erop!</span>
             <a href="product.html"><button>Bestel nu (&euro; 14,95)</button></a>
           </div>
