--- a/payment.html
+++ b/payment.html
@@ -17,35 +17,34 @@
     </div>
   </header>
   <main>
-    <div class="wrapper">
+    <div class="Payment"
       <article>
-        <h2>Betaling afronden</h2>
-        <span>Selecteer de manier waarop u de bestelling wilt betalen.</span>
-        <div class="sidy-by-side">
-          <div>
-            <a href="javascript:alert('Dit valt buiten de scope van dit project');">
-              <img src="images/ideal-logo-1024.png" alt="Met iDeal betalen" class="payment-option">
-            </a>
-          </div>
-          <div>
-            <a href="javascript:alert('Dit valt buiten de scope van dit project');">
-              <img src="images/visa-logo-1024.png" alt="Met Visa betalen" class="payment-option">
-            </a>
-          </div>
-          <div>
-            <a href="javascript:alert('Dit valt buiten de scope van dit project');">
-              <img src="images/mastercard-logo-1024.png" alt="Met Mastercard betalen" class="payment-option">
-            </a>
-          </div>
-          <div>
-            <a href="javascript:alert('Dit valt buiten de scope van dit project');">
-              <img src="images/paypal-logo-1024.png" alt="Met PayPal betalen" class="payment-option">
-            </a>
-          </div>
+      <h2>Betaling afronden</h2>
+      <span>Selecteer de manier waarop u de bestelling wilt betalen.</span>
+      <div class="sidy-by-side">
+        <div>
+          <a href="javascript:alert('Dit valt buiten de scope van dit project');">
+            <img src="images/ideal-logo-1024.png" alt="Met iDeal betalen" class="payment-option">
+          </a>
+        </div>
+        <div>
+          <a href="javascript:alert('Dit valt buiten de scope van dit project');">
+            <img src="images/visa-logo-1024.png" alt="Met Visa betalen" class="payment-option">
+          </a>
+        </div>
+        <div>
+          <a href="javascript:alert('Dit valt buiten de scope van dit project');">
+            <img src="images/mastercard-logo-1024.png" alt="Met Mastercard betalen" class="payment-option">
+          </a>
+        </div>
+        <div>
+          <a href="javascript:alert('Dit valt buiten de scope van dit project');">
+            <img src="images/paypal-logo-1024.png" alt="Met PayPal betalen" class="payment-option">
+          </a>
         </div>
       </article>
     </div>
-  </main>
+ </main>
   <footer>
     <div class="wrapper">
       <div class="copyright">
