--- a/product.html
+++ b/product.html
@@ -17,7 +17,21 @@
     </div>
   </header>
   <main>
-    
+    <div class="wrapper">
+      <h2>DeveloperLand Mok</h2>
+      <div class="container">
+      <div class="image">
+        <img src="images/merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+      </div>
+      <div class="text">
+        <p><b>In het kort:</b> Een mok met joow eigen actiefoto erop!</p>
+        <p><b>Prijs</b>&euro; 14,95</p>
+        <p><b>Over dit product</b>Een mooie mok met jouw eigen foto. De opdruk is van hoge kwaliteit en laat de lachende, huilende en van de pret schreeuwende gezichten zien van iedereen in jouw achtbaan-karretje.</p>
+        <button onclick="window.location.href='cart.html';">Plaats in winkelmand (+ &euro; 14,95)</button>
+      </div>
+      
+    </div>  
+    </div>
   </main>
   <footer>
     <div class="wrapper">
